# Auto-CMake

./: .gitignore  auto-cmake  pyproject.toml
.github/: LICENSE  README.md
src/codegen/: __init__.py  cmake_external.py  cmake_linker.py  cmake_optimization.py  cmake_options.py  cmake_sources.py  cmake_target.py  cmake_warnings.py  cmakelists.py
