[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-cmake"
version = "0.1.0"
description = "Auto CmakeLists generator for C|C++ projects"
authors = [
  { name = "Leorevoir", email = "leo.quinzler@epitech.eu" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
auto-cmake = "auto-cmake:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["src"]
